GPC/tests/examples/fail/methodArgs.gpc


GPRM::Kernel::Test t;

void methodArgs() {
    bool a = t.m1(True || true);
}
